# graph_coloring_problem

./: AlgorithmTools.cpp  AlgorithmTools.h  CMakeLists.txt  Graph.cpp  Graph.h  LICENSE  README.md  SimpleLocalSearch.cpp  SimpleLocalSearch.h  algorithm.cpp  algorithm.h  main.cpp  test.cpp
algorithm/: AlgorithmTools.cpp  AlgorithmTools.h  Graph.cpp  Graph.h  HybridEvolutionary.cpp  HybridEvolutionary.h  HybridEvolutionary2.cpp  HybridEvolutionary2.h  RandomTools.h  SimpleLocalSearch.cpp  SimpleLocalSearch.h  TabuSearch.cpp  TabuSearch.h
data_process/: README.binformat  asc2bin.c  bin2asc.c  showpreamble.c
doc/: DIMACS_standard_format.md  DIMACS_standard_format_cn.md
